[package]
name = "mcfly-fzf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "4"
mcfly = "0.7.1"
humantime = "2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
