[package]
name = "mcfly-fzf"
version = "0.1.3"
authors = ["Ben Parks <bnprks@users.noreply.github.com>"]
description = "Integrate McFly with fzf to combine a solid command history database with a widely-loved fuzzy search UI"
license = "MIT"
repository = "https://github.com/bnprks/mcfly-fzf"
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
  "screenshot.png"
]

[profile.release]
lto = true

[dependencies]
chrono = "0.4"
clap = {version = "4", features = ["derive"]}
mcfly = "0.8"
humantime = "2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rusqlite = "0.31"
